fix(navBar): fix squashed nav items in wide screens after nav bar is closed with closeNav()
* css/top.css:
    * Control #navBar width new `header.top div.topNav #navBar.open`.
* js/navBar.js:
    * Set the class of #navBar rather than setting its width directly.

--- a/css/top.css
+++ b/css/top.css
@@ -98,6 +98,11 @@ header.top div.topNav div.navIcon i {
 
   header.top div.topNav #navBar {
     display: block;
+    width: 0%;
+  }
+
+  header.top div.topNav #navBar.open {
+    width: 100%;
   }
 
   header.top div.topNav a {
